Bug 255710 nsDocShell::GetDocShellEnumerator leaks docShellEnum in failure cases patch by cst@andrew.cmu.edu r=timeless sr=jst